Fix missing background

--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -12,7 +12,6 @@ body {
   background-image: 
     linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgb(0, 8, 5) 60%),
     url('/assets/images/horizontal_banner.png');
-  background-image: url(/assets/images/bg.jpg);
   background-size: 100% auto;
   background-position: top center;
   background-repeat: no-repeat;
